--- a/product.htm
+++ b/product.htm
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>点餐系统_点餐系统功能流程界面【点餐吧 扫码点餐系统】</title>
+<title>点餐系统_点餐系统功能流程界面【小海豚 扫码点餐系统】</title>
 <meta name="keywords" content="">
 <meta name="description" content="点餐系统首选点餐吧，点菜系统功能介绍，扫码点餐系统流程介绍，扫码点餐使用界面介绍！">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
