--- a/anli.htm
+++ b/anli.htm
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>扫码点餐客户案例</title>
 <meta name="keywords" content="">
-<meta name="description" content="客户新罗宝上线「小海豚」扫码点餐系统后，见证了餐厅在口碑、翻台率、人力成本等七大方面的改变。">
+<meta name="description" content="客户Kfood韩食概念工坊上线「小海豚」扫码点餐系统后，见证了餐厅在口碑、翻台率、人力成本等七大方面的改变。">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="/diancanxitongGw/css/index.css">
 <link rel="stylesheet" href="/diancanxitongGw/css/aboutus.css">
@@ -84,9 +84,9 @@
  </ul>
 </div>
 <div class="nygy">
-   <div class="nygybt"><br>扫码点餐客户案例：新罗宝（韩国料理）<br></div>
+   <div class="nygybt"><br>扫码点餐客户案例：Kfood韩食概念工坊<br></div>
    <div class="nygynr"><br>
-   新罗宝位于深圳市南山区海上世界，是一家定位于中高端的韩国料理餐厅。通过上线【小海豚】扫码点餐，给餐厅带来了7大实实在在的改变，下面让我们来看看扫码点餐给新罗宝餐厅带来了哪些改变。<br><br>
+   Kfood韩食概念工坊位于惠州江北行政中心佳兆业商圈，是一家定位于中高端的韩国料理餐厅。通过上线【小海豚】扫码点餐，给餐厅带来了7大实实在在的改变，下面让我们来看看扫码点餐给新罗宝餐厅带来了哪些改变。<br><br>
  <strong> 改变1 口碑：</strong>这套<a class="defaultA1" href="index.htm">点餐系统</a>非常的方便快捷，服务员熟悉后大概在30秒-1分钟左右就可以服务好一桌顾客，顾客不需要等待了，服务员也不手忙脚乱了，以前都是到处崔喊而现在却一片和谐高效率，餐厅服务好了，顾客满意了，口碑自然好了，大家都喜欢这种点餐方式。<br><br>
    <strong>改变2 回头率：</strong>口碑有了回头率肯定高了，因为这里只有我一家店不需要等待，服务好。<br><br>
    <strong>改变3 流失率：</strong>以前因为高峰客流多，有好多顾客因等的不耐烦的而离开，现在因为不用等了，流失率也变低了。<br><br>
