--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,7 @@
 <!--幻灯片-->
 <div class="hdp">
  <ul id="homeslider" class="unstyled">
-    <li><a href="badadian.htm" title="扫码点餐，解决餐饮业八大痛点"><img src="/diancanxitongGw/images/u_02.jpg" alt="扫码点餐，解决餐饮业八大痛点"></a></li>
+    <li><a href="#" title="扫码点餐，解决餐饮业八大痛点"><img src="/diancanxitongGw/images/u_02.jpg" alt="扫码点餐，解决餐饮业八大痛点"></a></li>
  </ul>
 
 </div>
