--- a/anli.htm
+++ b/anli.htm
@@ -86,7 +86,7 @@
 <div class="nygy">
    <div class="nygybt"><br>扫码点餐客户案例：Kfood韩食概念工坊<br></div>
    <div class="nygynr"><br>
-   Kfood韩食概念工坊位于惠州江北行政中心佳兆业商圈，是一家定位于中高端的韩国料理餐厅。通过上线【小海豚】扫码点餐，给餐厅带来了7大实实在在的改变，下面让我们来看看扫码点餐给新罗宝餐厅带来了哪些改变。<br><br>
+   Kfood韩食概念工坊位于惠州江北行政中心佳兆业商圈，是一家定位于中高端的韩国料理餐厅。通过上线【小海豚】扫码点餐，给餐厅带来了7大实实在在的改变，下面让我们来看看扫码点餐给餐厅带来了哪些改变。<br><br>
  <strong> 改变1 口碑：</strong>这套<a class="defaultA1" href="index.htm">点餐系统</a>非常的方便快捷，服务员熟悉后大概在30秒-1分钟左右就可以服务好一桌顾客，顾客不需要等待了，服务员也不手忙脚乱了，以前都是到处崔喊而现在却一片和谐高效率，餐厅服务好了，顾客满意了，口碑自然好了，大家都喜欢这种点餐方式。<br><br>
    <strong>改变2 回头率：</strong>口碑有了回头率肯定高了，因为这里只有我一家店不需要等待，服务好。<br><br>
    <strong>改变3 流失率：</strong>以前因为高峰客流多，有好多顾客因等的不耐烦的而离开，现在因为不用等了，流失率也变低了。<br><br>
